# iotame

./: .env  .gitignore  README.md  devenv.nix  flake.nix
core/: Cargo.toml  build.rs
core/src/: config.rs  logging.rs  main.rs  runtime.rs
core/src/server/: mod.rs
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: HelloWorld.vue
frontend/src/pages/: index.vue
proto/: iotame.proto
