[package]
name = "iotame"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.36", features = ["derive", "string"] }
dotenvy = "0.15.7"
heed = "0.22.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.1"
tracing = "0.1.41"
ulid = { version = "1.2.1", features = ["serde"] }
axum = "0.8.4"
http = "1.3.1"
hyper = "1.6.0"
hyper-util = "0.1.16"
memory-serve = "1.2.1"
enum-as-inner = "0.6.1"
fern = { version = "0.7.1", features = ["colored", "date-based"] }
log = { version = "0.4.27", features = ["kv", "kv_serde", "serde"] }
figment = { version = "0.10.19", features = ["env", "serde_yaml", "test", "yaml"] }
serde_yaml = "0.9.34"
humantime = "2.2.0"
axum-reverse-proxy = { version = "1.0.3", default-features = false }

[build-dependencies]
tonic-prost-build = "0.14.1"
